python/testData/highlighting/awaitInNonAsyncFunctionPy27.py
import asyncio

def example():
    await<error descr="End of statement expected"> </error>asyncio.sleep(1)
